@@ -6,6 +6,7 @@ Revision history for Games-ABC_Path-Generator
     - Convert the constants module to Games::ABC_Path::Solver::Constants
     to merge the common parts of Games::ABC_Path::Solver and
     Games::ABC_Path::Generator.
+    - Convert to the methods of Games::ABC_Path::Solver::Base . 
     
 0.0.1       Thu Jul 21 19:02:11 IDT 2011
     - First version, released on an unsuspecting world.
